--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number Selection</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
         <h1>Select a Number</h1>
         <div class="button-group">
             <button id="toggleMode" class="toggle-btn">Switch to Letters</button>
+            <button id="toggleLowerCase" class="toggle-btn toggle-lowercase">Switch to Lowercase</button>
             <button id="toggleColors" class="toggle-btn toggle-colors">Switch to Colors</button>
             <button id="toggleSightWords" class="toggle-btn toggle-sight-words">Switch to Sight Words</button>
+            <button id="toggleEmotions" class="toggle-btn toggle-emotions">Switch to Emotions</button>
+            <button id="toggleShapes" class="toggle-btn toggle-shapes">Switch to Shapes</button>
         </div>
     </div>
     <div class="number-grid" id="numberGrid">
@@ -26,3 +29,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
