--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
 <body>
     <div class="header">
         <h1>Select a Number</h1>
-        <div class="dropdown">
-            <button id="menuButton" class="dropdown-btn">Learning Menu ▼</button>
-            <div class="dropdown-content">
-                <button id="toggleMode" class="toggle-btn">Switch to Letters</button>
-                <button id="toggleLowerCase" class="toggle-btn toggle-lowercase">Switch to Lowercase</button>
-                <button id="toggleColors" class="toggle-btn toggle-colors">Switch to Colors</button>
-                <button id="toggleSightWords" class="toggle-btn toggle-sight-words">Switch to Sight Words</button>
-                <button id="toggleEmotions" class="toggle-btn toggle-emotions">Switch to Emotions</button>
-                <button id="toggleShapes" class="toggle-btn toggle-shapes">Switch to Shapes</button>
-                <button id="bbcPhonics" class="toggle-btn toggle-bbc-phonics" onclick="window.open('https://www.bbc.co.uk/bitesize/topics/z7tr96f', '_blank')">BBC Phonics</button>
-                <button id="bodyParts" class="toggle-btn toggle-body-parts" onclick="window.open('https://www.youtube.com/watch?v=SUt8q0EKbms', '_blank')">Learn Body Parts</button>
+        <div class="header-buttons">
+            <button id="twinklBtn" class="twinkl-btn" onclick="window.open('https://www.twinkl.co.uk/', '_blank')">Twinkl Resources</button>
+            <button id="gemiiniBtn" class="gemiini-btn" onclick="window.open('https://learn.gemiini.org/authority/dashboard/', '_blank')">Gemiini Learning</button>
+            <div class="dropdown">
+                <button id="menuButton" class="dropdown-btn">Learning Menu ▼</button>
+                <div class="dropdown-content">
+                    <button id="toggleMode" class="toggle-btn">Switch to Letters</button>
+                    <button id="toggleLowerCase" class="toggle-btn toggle-lowercase">Switch to Lowercase</button>
+                    <button id="toggleColors" class="toggle-btn toggle-colors">Switch to Colors</button>
+                    <button id="toggleSightWords" class="toggle-btn toggle-sight-words">Switch to Sight Words</button>
+                    <button id="toggleEmotions" class="toggle-btn toggle-emotions">Switch to Emotions</button>
+                    <button id="toggleShapes" class="toggle-btn toggle-shapes">Switch to Shapes</button>
+                    <button id="bbcPhonics" class="toggle-btn toggle-bbc-phonics" onclick="window.open('https://www.bbc.co.uk/bitesize/topics/z7tr96f', '_blank')">BBC Phonics</button>
+                    <button id="bodyParts" class="toggle-btn toggle-body-parts" onclick="window.open('https://www.youtube.com/watch?v=SUt8q0EKbms', '_blank')">Learn Body Parts</button>
+                </div>
             </div>
         </div>
     </div>
