--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <button id="toggleShapes" class="toggle-btn toggle-shapes">Switch to Shapes</button>
                     <button id="bbcPhonics" class="toggle-btn toggle-bbc-phonics" onclick="window.open('https://www.bbc.co.uk/bitesize/topics/z7tr96f', '_blank')">BBC Phonics</button>
                     <button id="bodyParts" class="toggle-btn toggle-body-parts" onclick="window.open('https://www.youtube.com/watch?v=SUt8q0EKbms', '_blank')">Learn Body Parts</button>
+                    <button id="timerBtn" class="toggle-btn toggle-timer">Timer</button>
                 </div>
             </div>
         </div>
@@ -34,6 +35,16 @@
         <button id="prevBtn" class="nav-btn">Previous</button>
         <span id="pageInfo">Page 1</span>
         <button id="nextBtn" class="nav-btn">Next</button>
+    </div>
+    <div id="timerPage" class="timer-page" style="display: none;">
+        <h1>Timer</h1>
+        <input type="number" id="timerInput" placeholder="Enter seconds (1-10000)" min="1" max="10000">
+        <div class="timer-buttons">
+            <button id="startTimerBtn" class="nav-btn">Start Timer</button>
+            <button id="resetTimerBtn" class="nav-btn">Reset Timer</button>
+        </div>
+        <div id="timerDisplay" class="timer-display"></div>
+        <button id="backToMainBtn" class="nav-btn">Back to Main</button>
     </div>
     <script src="script.js"></script>
 </body>
