--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
             <button id="gemiiniBtn" class="gemiini-btn" onclick="window.open('https://learn.gemiini.org/authority/dashboard/', '_blank')">Gemiini Learning</button>
             <div class="dropdown">
                 <button id="menuButton" class="dropdown-btn">Learning Menu ▼</button>
-                <div class="dropdown-content">
-                    <button id="toggleMode" class="toggle-btn">Switch to Letters</button>
-                    <button id="toggleLowerCase" class="toggle-btn toggle-lowercase">Switch to Lowercase</button>
-                    <button id="toggleColors" class="toggle-btn toggle-colors">Switch to Colors</button>
-                    <button id="toggleSightWords" class="toggle-btn toggle-sight-words">Switch to Sight Words</button>
-                    <button id="toggleEmotions" class="toggle-btn toggle-emotions">Switch to Emotions</button>
-                    <button id="toggleShapes" class="toggle-btn toggle-shapes">Switch to Shapes</button>
+                <div class="dropdown-content" id="dropdown-content">
+                    <button id="toggleMode" class="toggle-btn">Numbers/Letters</button>
+                    <button id="toggleLowerCase" class="toggle-btn toggle-lowercase">Lowercase</button>
+                    <button id="toggleColors" class="toggle-btn toggle-colors">Colors</button>
+                    <button id="toggleSightWords" class="toggle-btn toggle-sight-words">Sight Words</button>
+                    <button id="toggleFixedSightWords" class="toggle-btn toggle-fixed-sight-words">Fixed Sight Words</button>
+                    <button id="toggleCVCMatching" class="toggle-btn toggle-cvc-matching">CVC Matching</button>
+                    <button id="toggleEmotions" class="toggle-btn toggle-emotions">Emotions</button>
+                    <button id="toggleShapes" class="toggle-btn toggle-shapes">Shapes</button>
                     <button id="bbcPhonics" class="toggle-btn toggle-bbc-phonics" onclick="window.open('https://www.bbc.co.uk/bitesize/topics/z7tr96f', '_blank')">BBC Phonics</button>
                     <button id="bodyParts" class="toggle-btn toggle-body-parts" onclick="window.open('https://www.youtube.com/watch?v=SUt8q0EKbms', '_blank')">Learn Body Parts</button>
+                    <button id="consonantSounds" class="toggle-btn" onclick="window.open('https://drive.google.com/drive/folders/1EzK4JqVcQoHD3jFkN9TnDs1xg7cosNAW', '_blank')">Consonant Sounds</button>
                     <button id="timerBtn" class="toggle-btn toggle-timer">Timer</button>
                 </div>
             </div>
