--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="header-buttons">
             <button id="twinklBtn" class="twinkl-btn" onclick="window.open('https://www.twinkl.co.uk/', '_blank')">Twinkl Resources</button>
             <button id="gemiiniBtn" class="gemiini-btn" onclick="window.open('https://learn.gemiini.org/authority/dashboard/', '_blank')">Gemiini Learning</button>
+            <button id="iepBtn" class="iep-btn" onclick="window.open('https://drive.google.com/drive/u/0/folders/1pyElDRf-z9mRDTjURE9Pc4gOFRZTL2zW', '_blank')">IEP</button>
             <div class="dropdown">
                 <button id="menuButton" class="dropdown-btn">Learning Menu ▼</button>
                 <div class="dropdown-content" id="dropdown-content">
@@ -20,12 +21,13 @@
                     <button id="toggleColors" class="toggle-btn toggle-colors">Colors</button>
                     <button id="toggleSightWords" class="toggle-btn toggle-sight-words">Sight Words</button>
                     <button id="toggleFixedSightWords" class="toggle-btn toggle-fixed-sight-words">Fixed Sight Words</button>
-                    <button id="toggleCVCMatching" class="toggle-btn toggle-cvc-matching">CVC Matching</button>
+                    <button id="toggleCVCMatching" class="toggle-btn toggle-cvc-matching" onclick="window.open('https://wordwall.net/en-gb/community/matching-pairs-cvc-words', '_blank')">CVC Matching</button>
                     <button id="toggleEmotions" class="toggle-btn toggle-emotions">Emotions</button>
                     <button id="toggleShapes" class="toggle-btn toggle-shapes">Shapes</button>
                     <button id="bbcPhonics" class="toggle-btn toggle-bbc-phonics" onclick="window.open('https://www.bbc.co.uk/bitesize/topics/z7tr96f', '_blank')">BBC Phonics</button>
                     <button id="bodyParts" class="toggle-btn toggle-body-parts" onclick="window.open('https://www.youtube.com/watch?v=SUt8q0EKbms', '_blank')">Learn Body Parts</button>
                     <button id="consonantSounds" class="toggle-btn" onclick="window.open('https://drive.google.com/drive/folders/1EzK4JqVcQoHD3jFkN9TnDs1xg7cosNAW', '_blank')">Consonant Sounds</button>
+                    <button id="selectedWords" class="toggle-btn" onclick="window.open('https://docs.google.com/presentation/d/1g2h-SAQEOFF1Or5MGLW2bUgh7SQ2psli/edit#slide=id.p1', '_blank')">Selected Words</button>
                     <button id="timerBtn" class="toggle-btn toggle-timer">Timer</button>
                 </div>
             </div>
