Add new educational resource buttons: Selected Words, IEP, Starfall, and Topmarks
- Added Selected Words button linking to Google Slides presentation
- Added IEP button linking to Google Drive folder
- Added Starfall button for reading and phonics resources
- Added Topmarks button for interactive educational games
- Updated CSS styles for all new buttons with consistent design
- Removed CVC matching functionality from script.js
- Removed body parts.png file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <button id="twinklBtn" class="twinkl-btn" onclick="window.open('https://www.twinkl.co.uk/', '_blank')">Twinkl Resources</button>
             <button id="gemiiniBtn" class="gemiini-btn" onclick="window.open('https://learn.gemiini.org/authority/dashboard/', '_blank')">Gemiini Learning</button>
             <button id="iepBtn" class="iep-btn" onclick="window.open('https://drive.google.com/drive/u/0/folders/1pyElDRf-z9mRDTjURE9Pc4gOFRZTL2zW', '_blank')">IEP</button>
+            <button id="starfallBtn" class="starfall-btn" onclick="window.open('https://www.starfall.com/h/', '_blank')">Starfall</button>
+            <button id="topmarksBtn" class="topmarks-btn" onclick="window.open('https://www.topmarks.co.uk/', '_blank')">Topmarks</button>
             <div class="dropdown">
                 <button id="menuButton" class="dropdown-btn">Learning Menu ▼</button>
                 <div class="dropdown-content" id="dropdown-content">
