--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number Selection</title>
+    <title>Kids Learning App</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
-        <h1>Select a Number</h1>
+        <h1>Kids Learning App - <span id="pageTitle">Select a Number</span></h1>
         <div class="header-buttons">
             <button id="twinklBtn" class="twinkl-btn" onclick="window.open('https://www.twinkl.co.uk/', '_blank')">Twinkl Resources</button>
             <button id="gemiiniBtn" class="gemiini-btn" onclick="window.open('https://learn.gemiini.org/authority/dashboard/', '_blank')">Gemiini Learning</button>
