feat: Add CVC and Shape Matching Games

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
                     <button id="toggleColors" class="toggle-btn toggle-colors">Colors</button>
                     <button id="toggleSightWords" class="toggle-btn toggle-sight-words">Sight Words</button>
                     <button id="toggleFixedSightWords" class="toggle-btn toggle-fixed-sight-words">Fixed Sight Words</button>
-                    <button id="toggleCVCMatching" class="toggle-btn toggle-cvc-matching" onclick="window.open('https://wordwall.net/en-gb/community/matching-pairs-cvc-words', '_blank')">CVC Matching</button>
-                    <button id="toggleEmotions" class="toggle-btn toggle-emotions">Emotions</button>
-                    <button id="toggleShapes" class="toggle-btn toggle-shapes">Shapes</button>
+                    <button id="toggleCVCMatching" class="toggle-btn toggle-cvc-matching" onclick="window.location.href='cvc.html'">CVC Matching</button>
+                    <button id="toggleShapes" class="toggle-btn toggle-shapes" onclick="window.location.href='shapes.html'">Shapes</button>
                     <button id="bbcPhonics" class="toggle-btn toggle-bbc-phonics" onclick="window.open('https://www.bbc.co.uk/bitesize/topics/z7tr96f', '_blank')">BBC Phonics</button>
                     <button id="bodyParts" class="toggle-btn toggle-body-parts" onclick="window.open('https://www.youtube.com/watch?v=SUt8q0EKbms', '_blank')">Learn Body Parts</button>
                     <button id="consonantSounds" class="toggle-btn" onclick="window.open('https://drive.google.com/drive/folders/1EzK4JqVcQoHD3jFkN9TnDs1xg7cosNAW', '_blank')">Consonant Sounds</button>
